[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-reliability-engineering"
version = "0.1.0"
description = "Sentinel de Datos Auto-reparable con Motia (EDA + DDD)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "motia>=1.0.0rc1",
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "integration: marks tests that require Motia/III server (run with -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
